Add privacy policy and legal notice links to footer

--- a/aviso_legal.html
+++ b/aviso_legal.html
@@ -9,8 +9,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel='stylesheet' href='css/boxicons.min.css'>
+    <link rel="stylesheet" href="css/style.css">
     <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css” />
 
     <!-- Icon Font Stylesheet -->
@@ -18,9 +20,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>Club Atletismo Santiago</title>
-    <meta name="title" content="Últimas Noticias | Club Atletismo Santiago" />
+    <meta name="title" content="Patrocinadores del Club | Atletismo Santiago" />
     <meta name="description"
-        content="Consulta las últimas noticias del Club Atletismo Santiago. Club adscrito a la Federación Gallega de Atletismo (FGA). Hecho por atletas para atletas." />
+        content="Patrocinadores de nuestro club. Únete como patrocinador. Club adscrito a la Federación Gallega de Atletismo (FGA). Hecho por atletas para atletas." />
     <meta name="keywords" content="CAS,Club Atletismo Santiago, Atletismo Santiago, Club Atletismo, Atletismo,AtletismoSantiago,ClubAtletismoSantiago,AtletismoGalego,FederacionGalegaAtletismo,FederacionGallegaAtletismo,FGA,GaliciaAtletismo,CarreirasGalegas,AtletismoGallego,PistaCubierta,PistaCuberta,PistaAireLibre,PistaAlAireLibre,PistaCorta,PistaCurta,CampeonatoGallegoAtletismo,CrossGalicia,TrailGalicia,Galicia,AtletismoCoruna,AtletismoLugo,AtletismoOurense,AtletismoPontevedra,AtletismoVigo,CorrerEnGalicia,RunningSantiago,DeporteGallego,RunnersGalicia,AtletismoGalicia,CorrerEnCompostela,RunnersCompostela,AtletasGallegos,SantiagoRunners,GaliciaEnForma,CarreraPopularSantiago,CarreraPedestreSantiago,SantYago10k,SantYago,Corresan,ConcelloSantiago,RunGallego,AtletismoEspaña,EntrenamientoAtletismo,CorrerEsVida,AtletismoJuvenil,AtletismoFemenino,CompostelaRunnersClub,GaliciaActiva,ViveElDeporteGallego,CorrerPorSalud,EntrenamientoGallego,AtletismoPopular,RunSantiagoRun,AtletismoCoruña,GaliciaRunnersClub,RunGallegoRun,SantiagoDeporte,CarreraGallega,CorrerEnSantiagoDeCompostela,AtletismoCorredores,ClubDeportivoSantiago,RunnersVigo,GaliciaRun,EntrenamientoDeAtletismo,CorrerGallego,SantiagoRunClub,DeporteCompostela,CaminodeSantiagoRunning,AtletismoInfantil,CorrerPorGalicia,RunnersJuveniles,DeporteSantiagués,GaliciaSaludable,AtletismoViral,CorrerConPasión,SantiagoRunnersLife,GaliciaEnCarrera,AtletismoGallegoRun,RunnersCoruña,CorrerSantiagoGalicia,SantiagoRunnersCommunity,ClubAtletismoGallego,RutasDeRunningSantiago,DeporteCoruña,AtletismoCoruñés,CorrerEnGallego,SantiagoTrailRunning,RunningGallego,CarreraAtletismoSantiago,GaliciaRunnersLife,ClubAtletismoCoruña,SantiagoAtletismoActivo,CorrerEnEquipo,AtletismoConPasión,GaliciaRunAndFun,RunningSantiagoDeCompostela,AtletismoCorrerVivir,SantiagoRunnersFamily,GaliciaRunnersChallenge,CorrerEsVivirGalicia,AtletismoSantiagoRunClub,RutasDeAtletismoGallego,PistaAtletismoGalicia,CampeonatoGallegoAtletismo,CompeticionesAtletismoSantiago,PistaYCampoGalicia,SantiagoCompeticionesAtletismo,GaliciaRunnerChallenge,CampeonatoGallegoPista,AtletismoSantiagoCompetición,GaliciaRunnersChampionship,SantiagoPistaAtletismo,CampeonatoAtletismoCoruña,GaliciaTrackAndField,CompeticionesDeportivasSantiago,AtletismoGallegoChampion,CampeonatoGallegoRunning,PistaAtletismoCoruña,CompetenciasGallegasSantiago,GaliciaAtletismoChallenge,SantiagoCampeonatoAtletismo,CampeonatoGallegoRunner,AtletismoEnPistaGallega,GaliciaAthleticsChampion,SantiagoRunningCompetition,CampeonatoGallegoRunners,PistaAtletismoSantiagoGalicia,Running,Runners,Run,Correr,Corredores,ComoEmpezarACorrer,NiñosCorrer,NenosAtletismo,AtletismoSub18,AtletismoSub20,AtletismoSub23,AtletismoSub16, EscuelaAtletismo,A.D. Fogar Carballo,
 A.D. Rego do Lobo,
 AD Fogar Carballo – Oleiros,
@@ -158,9 +160,8 @@ Triki Team" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Atletismo Santiago" />
 
-    <meta property="og:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
-    <meta name="twitter:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
-
+    <meta property="og:image" content="https://www.atletismosantiago.club/img/patrocinadores.webp">
+    <meta name="twitter:image" content="https://www.atletismosantiago.club/img/patrocinadores.webp">
 
 </head>
 
@@ -239,67 +240,46 @@ Triki Team" />
         </div>
 
     </nav>
-
     <div class="container mt-5 py-1">
         <div class="container">
             <div class="text-center pb-1 wow fadeInUp" data-wow-delay="0.1s">
-                <h5 class="text-primary-gradient fw-medium">NOTICIAS</h5>
-                <h1 class="mb-1">Últimas Noticias del Club</h1>
-                <p class="mt-3 mb-0">Descubre las últimas noticias del Club Atletismo Santiago.
-
+                <h5 class="text-primary-gradient fw-medium">AVISO LEGAL</h5>
+                <h1 class="mb-1">Aviso Legal</h1>
                 </p>
                 <hr class="divider" />
-                <br>
             </div>
 
-        </div>
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    
+                    <p><strong>DATOS IDENTIFICATIVOS</strong></p>
+                    <p>En cumplimiento con el deber de información recogido en la Ley 34/2002, de 11 de julio, de Servicios de la Sociedad de la Información y del Comercio Electrónico (LSSI), le informamos que este sitio web es titularidad del CLUB ATLETISMO SANTIAGO, con domicilio en la Avenida Romero Donallo, 29 - Entreplanta
 
-        <div id="noticias-container" class="row mt-4">
-            <p id="loading-message" style="text-align: center;font-weight: 700 !important;
-            color: #092932;font-size: large;">Cargando noticias, espera unos segundos...</p>
-
-        </div>
-
-
-
-        <!-- Modal para la noticia completa -->
-        <div class="modal fade" id="noticiaModal" tabindex="-1" role="dialog" aria-labelledby="noticiaModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="noticiaModalLabel">Noticia Completa</h5>
-                        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div id="modal-body" class="modal-body">
-
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
-                    </div>
-
+                        15706, Santiago de Compostela - A Coruña con CIF: G70389721. Inscrito en el Registro de la Federación Gallega de Atletismo con el número de licencia GA1304.</p>
+                    <p><strong>CONDICIONES GENERALES DE USO</strong></p>
+                    <p>Con carácter general, el Usuario se obliga al cumplimiento de las presentes condiciones y términos de uso, y obrar siempre conforme a la ley, a las buenas costumbres y a las exigencias de la buena fe, empleando la diligencia adecuada a la naturaleza del servicio del que disfruta, y absteniéndose de utilizar el presente sitio web de cualquier forma que pueda impedir, dañar o deteriorar el normal funcionamiento del mismo, los bienes o derechos del titular del sitio web, del resto de Usuarios o, en general, de cualquier tercero.
+                        <br>
+                        CLUB ATLETISMO SANTIAGO podrá, en todo momento y sin previo aviso, modificar las presentes Condiciones Generales, así como las Condiciones Particulares que, en su caso, se incluyan, mediante la publicación de dichas modificaciones en el sitio web con el fin de que puedan ser conocidas por los Usuarios.</p>
+                    <p><strong>PROPIEDAD INTELECTUAL E INDUSTRIAL</strong></p>
+                    <p>CLUB ATLETISMO SANTIAGO es titular de todos los derechos de propiedad intelectual e industrial de su página web “www.atletismosantiago.club”, así como de los elementos contenidos en la misma.
+                        <br>
+                        En virtud de lo dispuesto en la Ley de Propiedad Intelectual, queda expresamente prohibida la reproducción, la distribución y la comunicación pública, incluida su modalidad de puesta a disposición, de la totalidad o parte de los contenidos de esta página web, con fines comerciales, en cualquier soporte y por cualquier medio técnico, sin la autorización del CLUB ATLETISMO SANTIAGO.
+                        <br>
+                        El Usuario se compromete a respetar los derechos de Propiedad Intelectual e Industrial titularidad del CLUB ATLETISMO SANTIAGO.</p>
+                    <p><strong>EXONERACIÓN DE RESPONSABILIDAD</strong></p>
+                    <p>Tanto el acceso a la web del CLUB ATLETISMO SANTIAGO, como el uso que pueda hacerse de la información contenida en la misma es de la exclusiva responsabilidad de quien lo realiza, es decir, el Usuario.
+                        <br>
+                        CLUB ATLETISMO SANTIAGO no se hace responsable de los posibles errores de seguridad que se puedan producir ni de los posibles daños que puedan causarse al sistema informático del Usuario (hardware y software), de los ficheros o documentos almacenados en el mismo, como consecuencia de la presencia de un virus en el ordenador del Usuario utilizado para la conexión a los servicios y contenidos de la Web, de un mal funcionamiento del navegador o del uso de versiones no actualizadas del mismo.</p>
+                    <p><strong>LEY Y JURISDICCIÓN APLICABLE</strong></p>
+                    <p>Las partes, con renuncia expresa a cualquier otro fuero, se someten al de los juzgados y tribunales de la ciudad de Santiago de Compostela para cualquier controversia que pudiera derivarse del acceso, o uso de la Web.                    </p>
+                    
                 </div>
             </div>
         </div>
-
-
-    </div>
-
     </div>
 
 
 
-
-
-
-
-
-
-
-
-    <!-- Footer-->
     <footer class="bg-light py-5 mt-5">
 
         <div class="container">
@@ -324,7 +304,6 @@ Triki Team" />
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a>
                         </li>
-
 
 
                         <li class="nav-item mb-2"><a href="./noticias.html" class="nav-link p-0 text-muted">Últimas
@@ -389,140 +368,21 @@ Triki Team" />
                 </div>
             </div>
 
+
+
+
         </div>
     </footer>
 
 
 
-
-
     <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script> -->
     <script src="js/app.js"></script>
-
-    <script>
-        let noticiasData; // Variable global para almacenar los datos de noticias
-
-        // Cargar noticias desde el JSON
-        fetch('https://raw.githubusercontent.com/Toimil/AtletismoSantiago/main/data/NoticiasCAS.json')
-            .then(response => response.json())
-            .then(data => {
-                noticiasData = data.filter(noticia => noticia.ID !== "");
-                mostrarNoticias(noticiasData, 6);
-                document.getElementById('loading-message').style.display = 'none';
-            })
-            .catch(error => {
-                // Manejar errores, por ejemplo, mostrar un mensaje de error
-                document.getElementById('loading-message').innerHTML = 'Error al cargar las noticias. Por favor, inténtelo de nuevo más tarde.';
-            });
-
-        function mostrarNoticias(noticias, cantidadMaxima) {
-            const noticiasContainer = document.getElementById('noticias-container');
-            const noticiasCargadas = noticiasContainer.querySelectorAll('.noticia-card').length;
-
-            // Ordenar las noticias por fecha en orden descendente
-            noticias.sort((a, b) => new Date(convertirAFecha(b.Fecha)) - new Date(convertirAFecha(a.Fecha)));
-
-            noticias.slice(noticiasCargadas, noticiasCargadas + cantidadMaxima).forEach(noticia => {
-                const imagenUrl = noticia.Imagen || 'https://www.atletismosantiago.club/img/bg_banner1.webp';
-
-                const card = `
-            <div class="col-md-6 col-lg-4 mb-4 noticia-card">
-                <div class="card">
-                    <img src="${imagenUrl}" class="card-img-top" alt="${noticia.Titulo}">
-                    <div class="card-body">
-                        <h5 class="card-title" style="text-align: center;">${noticia.Titulo}</h5>
-                        <p class="card-text">${noticia.Contenido.substring(0, 150)}...</p>
-                        <div class="text-center">
-                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#noticiaModal" onclick="cargarNoticia('${noticia.ID}')">Leer más</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        `;
-                noticiasContainer.innerHTML += card;
-            });
-
-            // Mostrar el botón de cargar más si hay más noticias por cargar
-            if (noticiasCargadas + cantidadMaxima < noticias.length) {
-                const cargarMasButton = `
-            <div class="col-12 text-center mt-3">
-                <button class="btn btn-secondary cargar-mas-button" onclick="cargarMasNoticias(${cantidadMaxima})">Cargar más noticias</button>
-            </div>
-        `;
-                noticiasContainer.innerHTML += cargarMasButton;
-            } else {
-                const cargarMasButton = document.querySelector('.cargar-mas-button');
-                if (cargarMasButton) {
-                    cargarMasButton.style.display = 'none';
-                }
-            }
-        }
-
-        function cargarMasNoticias(cantidadMaxima) {
-            mostrarNoticias(noticiasData, cantidadMaxima);
-
-        }
-
-        function cargarNoticia(ID) {
-
-            // Buscar la noticia con el ID indicado
-            let noticia;
-            for (let i = 0; i < noticiasData.length; i++) {
-                if (noticiasData[i].ID == ID) {
-                    noticia = noticiasData[i];
-                    break; // Importante: detener el bucle una vez que se ha encontrado la noticia
-                }
-            }
-            /*
-            // Convertir la cadena de fecha a un objeto Date
-            const fechaNueva = new Date(noticia.Fecha);
-
-            // Obtener los componentes de la fecha
-            const dia = fechaNueva.getDate();
-            const mes = fechaNueva.getMonth() + 1; // Sumar 1 porque los meses comienzan desde 0
-            const ano = fechaNueva.getFullYear();
-
-            // Formatear la fecha como "DD/MM/YYYY"
-            const fechaFormateada = `${dia}/${mes}/${ano}`;*/
-            const modalBody = document.getElementById('modal-body');
-            const imagenUrl = noticia.Imagen || 'https://www.atletismosantiago.club/img/bg_banner1.webp';
-
-            modalBody.innerHTML = `
-
-                <img src="${imagenUrl}" class="img-fluid mb-3" alt="${noticia.Titulo}">
-                <h5>${noticia.Titulo}</h5>
-                <p>${noticia.Contenido}</p>
-                <p><strong>Fecha:</strong> ${noticia.Fecha}</p>
-            `;
-        }
-
-        function convertirAFecha(fechaString) {
-            // Dividir la cadena de fecha en día, mes y año
-            var partesFecha = fechaString.split('/');
-            var dia = parseInt(partesFecha[0], 10);
-            var mes = parseInt(partesFecha[1], 10) - 1; // Restar 1 porque los meses van de 0 a 11 en JavaScript
-            var año = parseInt(partesFecha[2], 10);
-
-            // Crear un objeto de fecha con las partes extraídas
-            var fecha = new Date(año, mes, dia);
-
-            return fecha;
-        }
-    </script>
-
-    <style>
-        #modal-body p {
-            white-space: pre-line;
-        }
-
-        .noticia-card .card-img-top {
-            width: 100%;
-            object-fit: cover;
-        }
-    </style>
 
 
 </body>
