--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -425,6 +425,11 @@ Triki Team" />
                             aria-label="Facebook de Atletismo Santiago"></a></li>
                 </ul>
             </div>
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <p class="text-center"> <a href="./politica_privacidad.html" class="text-decoration-none">Política de Privacidad</a> | <a href="./aviso_legal.html" class="text-decoration-none">Aviso Legal</a></p>
+                </div>
+            </div>
 
 
         </div>
