--- a/historia.html
+++ b/historia.html
@@ -351,6 +351,11 @@ Triki Team" />
                     <li class="ms-4"><a class="bi bi-facebook link-dark d-none d-sm-inline" href="https://www.facebook.com/clubatletismo.santiago/?locale=es_ES" aria-label="Facebook de Atletismo Santiago"></a></li>
                 </ul>
             </div>
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <p class="text-center"> <a href="./politica_privacidad.html" class="text-decoration-none">Política de Privacidad</a> | <a href="./aviso_legal.html" class="text-decoration-none">Aviso Legal</a></p>
+                </div>
+            </div>
 
 
         </div>
