--- a/index.html
+++ b/index.html
@@ -710,6 +710,12 @@ Triki Team" />
                 </ul>
             </div>
 
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <p class="text-center"> <a href="./politica_privacidad.html" class="text-decoration-none">Política de Privacidad</a> | <a href="./aviso_legal.html" class="text-decoration-none">Aviso Legal</a></p>
+                </div>
+            </div>
+
 
         </div>
     </footer>
