cambiadas pequenhas cosas

--- a/aviso_legal.html
+++ b/aviso_legal.html
@@ -20,9 +20,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>Club Atletismo Santiago</title>
-    <meta name="title" content="Patrocinadores del Club | Atletismo Santiago" />
+    <meta name="title" content="Aviso Legal | Atletismo Santiago" />
     <meta name="description"
-        content="Patrocinadores de nuestro club. Únete como patrocinador. Club adscrito a la Federación Gallega de Atletismo (FGA). Hecho por atletas para atletas." />
+        content="Aviso Legal de nuestro club. Club adscrito a la Federación Gallega de Atletismo (FGA). Hecho por atletas para atletas." />
     <meta name="keywords" content="CAS,Club Atletismo Santiago, Atletismo Santiago, Club Atletismo, Atletismo,AtletismoSantiago,ClubAtletismoSantiago,AtletismoGalego,FederacionGalegaAtletismo,FederacionGallegaAtletismo,FGA,GaliciaAtletismo,CarreirasGalegas,AtletismoGallego,PistaCubierta,PistaCuberta,PistaAireLibre,PistaAlAireLibre,PistaCorta,PistaCurta,CampeonatoGallegoAtletismo,CrossGalicia,TrailGalicia,Galicia,AtletismoCoruna,AtletismoLugo,AtletismoOurense,AtletismoPontevedra,AtletismoVigo,CorrerEnGalicia,RunningSantiago,DeporteGallego,RunnersGalicia,AtletismoGalicia,CorrerEnCompostela,RunnersCompostela,AtletasGallegos,SantiagoRunners,GaliciaEnForma,CarreraPopularSantiago,CarreraPedestreSantiago,SantYago10k,SantYago,Corresan,ConcelloSantiago,RunGallego,AtletismoEspaña,EntrenamientoAtletismo,CorrerEsVida,AtletismoJuvenil,AtletismoFemenino,CompostelaRunnersClub,GaliciaActiva,ViveElDeporteGallego,CorrerPorSalud,EntrenamientoGallego,AtletismoPopular,RunSantiagoRun,AtletismoCoruña,GaliciaRunnersClub,RunGallegoRun,SantiagoDeporte,CarreraGallega,CorrerEnSantiagoDeCompostela,AtletismoCorredores,ClubDeportivoSantiago,RunnersVigo,GaliciaRun,EntrenamientoDeAtletismo,CorrerGallego,SantiagoRunClub,DeporteCompostela,CaminodeSantiagoRunning,AtletismoInfantil,CorrerPorGalicia,RunnersJuveniles,DeporteSantiagués,GaliciaSaludable,AtletismoViral,CorrerConPasión,SantiagoRunnersLife,GaliciaEnCarrera,AtletismoGallegoRun,RunnersCoruña,CorrerSantiagoGalicia,SantiagoRunnersCommunity,ClubAtletismoGallego,RutasDeRunningSantiago,DeporteCoruña,AtletismoCoruñés,CorrerEnGallego,SantiagoTrailRunning,RunningGallego,CarreraAtletismoSantiago,GaliciaRunnersLife,ClubAtletismoCoruña,SantiagoAtletismoActivo,CorrerEnEquipo,AtletismoConPasión,GaliciaRunAndFun,RunningSantiagoDeCompostela,AtletismoCorrerVivir,SantiagoRunnersFamily,GaliciaRunnersChallenge,CorrerEsVivirGalicia,AtletismoSantiagoRunClub,RutasDeAtletismoGallego,PistaAtletismoGalicia,CampeonatoGallegoAtletismo,CompeticionesAtletismoSantiago,PistaYCampoGalicia,SantiagoCompeticionesAtletismo,GaliciaRunnerChallenge,CampeonatoGallegoPista,AtletismoSantiagoCompetición,GaliciaRunnersChampionship,SantiagoPistaAtletismo,CampeonatoAtletismoCoruña,GaliciaTrackAndField,CompeticionesDeportivasSantiago,AtletismoGallegoChampion,CampeonatoGallegoRunning,PistaAtletismoCoruña,CompetenciasGallegasSantiago,GaliciaAtletismoChallenge,SantiagoCampeonatoAtletismo,CampeonatoGallegoRunner,AtletismoEnPistaGallega,GaliciaAthleticsChampion,SantiagoRunningCompetition,CampeonatoGallegoRunners,PistaAtletismoSantiagoGalicia,Running,Runners,Run,Correr,Corredores,ComoEmpezarACorrer,NiñosCorrer,NenosAtletismo,AtletismoSub18,AtletismoSub20,AtletismoSub23,AtletismoSub16, EscuelaAtletismo,A.D. Fogar Carballo,
 A.D. Rego do Lobo,
 AD Fogar Carballo – Oleiros,
@@ -160,8 +160,6 @@ Triki Team" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Atletismo Santiago" />
 
-    <meta property="og:image" content="https://www.atletismosantiago.club/img/patrocinadores.webp">
-    <meta name="twitter:image" content="https://www.atletismosantiago.club/img/patrocinadores.webp">
 
 </head>
 
@@ -255,7 +253,7 @@ Triki Team" />
                     <p><strong>DATOS IDENTIFICATIVOS</strong></p>
                     <p>En cumplimiento con el deber de información recogido en la Ley 34/2002, de 11 de julio, de Servicios de la Sociedad de la Información y del Comercio Electrónico (LSSI), le informamos que este sitio web es titularidad del CLUB ATLETISMO SANTIAGO, con domicilio en la Avenida Romero Donallo, 29 - Entreplanta
 
-                        15706, Santiago de Compostela - A Coruña con CIF: G70389721. Inscrito en el Registro de la Federación Gallega de Atletismo con el número de licencia GA1304.</p>
+                        15706, Santiago de Compostela - A Coruña con CIF: G70389721. Inscrito en el Registro de Entidades Deportivas de la Xunta de Galicia con el número de licencia C-11736.</p>
                     <p><strong>CONDICIONES GENERALES DE USO</strong></p>
                     <p>Con carácter general, el Usuario se obliga al cumplimiento de las presentes condiciones y términos de uso, y obrar siempre conforme a la ley, a las buenas costumbres y a las exigencias de la buena fe, empleando la diligencia adecuada a la naturaleza del servicio del que disfruta, y absteniéndose de utilizar el presente sitio web de cualquier forma que pueda impedir, dañar o deteriorar el normal funcionamiento del mismo, los bienes o derechos del titular del sitio web, del resto de Usuarios o, en general, de cualquier tercero.
                         <br>
