--- a/politica_privacidad.html
+++ b/politica_privacidad.html
@@ -20,9 +20,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>Club Atletismo Santiago</title>
-    <meta name="title" content="Patrocinadores del Club | Atletismo Santiago" />
+    <meta name="title" content="Politica de Privacidad | Atletismo Santiago" />
     <meta name="description"
-        content="Patrocinadores de nuestro club. Únete como patrocinador. Club adscrito a la Federación Gallega de Atletismo (FGA). Hecho por atletas para atletas." />
+        content="Política de Privacidad de nuestro club. Club adscrito a la Federación Gallega de Atletismo (FGA). Hecho por atletas para atletas." />
     <meta name="keywords" content="CAS,Club Atletismo Santiago, Atletismo Santiago, Club Atletismo, Atletismo,AtletismoSantiago,ClubAtletismoSantiago,AtletismoGalego,FederacionGalegaAtletismo,FederacionGallegaAtletismo,FGA,GaliciaAtletismo,CarreirasGalegas,AtletismoGallego,PistaCubierta,PistaCuberta,PistaAireLibre,PistaAlAireLibre,PistaCorta,PistaCurta,CampeonatoGallegoAtletismo,CrossGalicia,TrailGalicia,Galicia,AtletismoCoruna,AtletismoLugo,AtletismoOurense,AtletismoPontevedra,AtletismoVigo,CorrerEnGalicia,RunningSantiago,DeporteGallego,RunnersGalicia,AtletismoGalicia,CorrerEnCompostela,RunnersCompostela,AtletasGallegos,SantiagoRunners,GaliciaEnForma,CarreraPopularSantiago,CarreraPedestreSantiago,SantYago10k,SantYago,Corresan,ConcelloSantiago,RunGallego,AtletismoEspaña,EntrenamientoAtletismo,CorrerEsVida,AtletismoJuvenil,AtletismoFemenino,CompostelaRunnersClub,GaliciaActiva,ViveElDeporteGallego,CorrerPorSalud,EntrenamientoGallego,AtletismoPopular,RunSantiagoRun,AtletismoCoruña,GaliciaRunnersClub,RunGallegoRun,SantiagoDeporte,CarreraGallega,CorrerEnSantiagoDeCompostela,AtletismoCorredores,ClubDeportivoSantiago,RunnersVigo,GaliciaRun,EntrenamientoDeAtletismo,CorrerGallego,SantiagoRunClub,DeporteCompostela,CaminodeSantiagoRunning,AtletismoInfantil,CorrerPorGalicia,RunnersJuveniles,DeporteSantiagués,GaliciaSaludable,AtletismoViral,CorrerConPasión,SantiagoRunnersLife,GaliciaEnCarrera,AtletismoGallegoRun,RunnersCoruña,CorrerSantiagoGalicia,SantiagoRunnersCommunity,ClubAtletismoGallego,RutasDeRunningSantiago,DeporteCoruña,AtletismoCoruñés,CorrerEnGallego,SantiagoTrailRunning,RunningGallego,CarreraAtletismoSantiago,GaliciaRunnersLife,ClubAtletismoCoruña,SantiagoAtletismoActivo,CorrerEnEquipo,AtletismoConPasión,GaliciaRunAndFun,RunningSantiagoDeCompostela,AtletismoCorrerVivir,SantiagoRunnersFamily,GaliciaRunnersChallenge,CorrerEsVivirGalicia,AtletismoSantiagoRunClub,RutasDeAtletismoGallego,PistaAtletismoGalicia,CampeonatoGallegoAtletismo,CompeticionesAtletismoSantiago,PistaYCampoGalicia,SantiagoCompeticionesAtletismo,GaliciaRunnerChallenge,CampeonatoGallegoPista,AtletismoSantiagoCompetición,GaliciaRunnersChampionship,SantiagoPistaAtletismo,CampeonatoAtletismoCoruña,GaliciaTrackAndField,CompeticionesDeportivasSantiago,AtletismoGallegoChampion,CampeonatoGallegoRunning,PistaAtletismoCoruña,CompetenciasGallegasSantiago,GaliciaAtletismoChallenge,SantiagoCampeonatoAtletismo,CampeonatoGallegoRunner,AtletismoEnPistaGallega,GaliciaAthleticsChampion,SantiagoRunningCompetition,CampeonatoGallegoRunners,PistaAtletismoSantiagoGalicia,Running,Runners,Run,Correr,Corredores,ComoEmpezarACorrer,NiñosCorrer,NenosAtletismo,AtletismoSub18,AtletismoSub20,AtletismoSub23,AtletismoSub16, EscuelaAtletismo,A.D. Fogar Carballo,
 A.D. Rego do Lobo,
 AD Fogar Carballo – Oleiros,
@@ -160,8 +160,6 @@ Triki Team" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Atletismo Santiago" />
 
-    <meta property="og:image" content="https://www.atletismosantiago.club/img/patrocinadores.webp">
-    <meta name="twitter:image" content="https://www.atletismosantiago.club/img/patrocinadores.webp">
 
 </head>
 
