cambiados links privacida ig y fb

--- a/politica_privacidad.html
+++ b/politica_privacidad.html
@@ -426,10 +426,10 @@ Triki Team" />
 
 
                     </p>
-                    <p>Facebook: <a href="https://es-es.facebook.com/legal/FB_Work_Privacy" target="_blank"
-                            rel="noopener noreferrer">https://es-es.facebook.com/legal/FB_Work_Privacy</a></p>
-                    <p>Instagram: <a href="https://es-la.facebook.com/help/instagram/155833707900388" target="_blank"
-                            rel="noopener noreferrer">https://es-la.facebook.com/help/instagram/155833707900388</a></p>
+                    <p><a href="https://es-es.facebook.com/legal/FB_Work_Privacy" target="_blank"
+                            rel="noopener noreferrer">Facebook</a></p>
+                    <p><a href="https://es-la.facebook.com/help/instagram/155833707900388" target="_blank"
+                            rel="noopener noreferrer">Instagram</a></p>
 
 
                 </div>
