--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ Triki Team" />
                         <i class="fa fa-running fa-3x text-white"></i>
                     </div>
                     <h5 class="mt-4 mb-3">Pruebas de Clubes</h5>
-                    <p class="mb-0">Disponemos de un equipo absoluto luchando por ascender a 1ª división y también
-                        de equipos sub-20 y máster</p>
+                    <p class="mb-0">Disponemos de un equipo absoluto luchando por ascender a 1ª división. Además contamos con equipos, tanto femenino como masculino, en el campeonato gallego de clubes, así como también
+                        equipos sub-20 y máster</p>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.3s">
