--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ Triki Team" />
                         <i class="fa fa-running fa-3x text-white"></i>
                     </div>
                     <h5 class="mt-4 mb-3">Pruebas de Clubes</h5>
-                    <p class="mb-0">Disponemos de un equipo absoluto luchando por ascender a 1ª división. Además contamos con equipos, tanto femenino como masculino, en el campeonato gallego de clubes, así como también
+                    <p class="mb-0">Disponemos de un equipo absoluto luchando por ascender a 1ª división. Además contamos con un equipo femenino en el campeonato gallego absoluto de clubes, así como también
                         equipos sub-20 y máster</p>
                 </div>
             </div>
