--- a/index.html
+++ b/index.html
@@ -325,7 +325,9 @@ Triki Team" />
                     </div>
                     <h5 class="mt-4 mb-3">Convenios con Instalaciones</h5>
                     <p class="mb-0">Para aportar la mayor flexibilidad a los atletas, poseemos convenios con
-                        instalaciones locales de atletismo</p>
+                        instalaciones locales de atletismo
+                    
+                    </p>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.5s">
@@ -336,7 +338,9 @@ Triki Team" />
                     </div>
                     <h5 class="mt-4 mb-3">Grupos de entrenamiento</h5>
                     <p class="mb-0">Tenemos grupos de tecnificación en todas las pruebas atléticas siempre
-                        asesorados por profesionales</p>
+                        asesorados por profesionales
+                    
+                    </p>
                 </div>
             </div>
         </div>
