cambiado el texto pruebas clubes atractivos

--- a/index.html
+++ b/index.html
@@ -313,8 +313,7 @@ Triki Team" />
                         <i class="fa fa-running fa-3x text-white"></i>
                     </div>
                     <h5 class="mt-4 mb-3">Pruebas de Clubes</h5>
-                    <p class="mb-0">Disponemos de un equipo absoluto luchando por ascender a 1ª división. Además contamos con un equipo femenino en el campeonato gallego absoluto de clubes, así como también
-                        equipos sub-20 y máster</p>
+                    <p class="mb-0">Un equipo masculino absoluto luchando por ascender a 1ª división. También equipo femenino en el gallego absoluto y equipos sub-20 y máster</p>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 text-center pt-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -447,10 +446,8 @@ Triki Team" />
         <div class="container ">
             <div class="row">
                 <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5rem;">
-                    <h5 class="text-primary-gradient fw-medium">NOTICIAS</h5>
+                    <h5 class="text-primary-gradient fw-medium">ACTUALIDAD</h5>
                     <h1 class="mb-1">Últimas Noticias</h1>
-                    <br>
-                    <p>Conoce las últimas noticias del Club Atletismo Santiago en estos momentos</p>
                     <hr class="divider" />
                     <br>
                 </div>
